[package]
name = "request-reply"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "request-reply"
path = "src/main.rs"

[[bin]]
name = "consumer"
path = "src/consumer.rs"

[dependencies]
mqtt-wasi = { path = "../.." }
tokio = { version = "1", features = ["rt", "macros"] }
serde_json = "1"

[profile.release]
lto = true
opt-level = "z"
strip = true
panic = "abort"
